[package]
name = "pi_dyn_uint"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Defines the interface between the index factory and the type factory"
repository = "https://github.com/GaiaWorld/pi_dyn_uint.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_dyn_uint"]

[dependencies]
pi_slab = "0.1"

[[example]]
name = "basic"